stretch goal: fixed nav bar with opacity complete

--- a/css/index.css
+++ b/css/index.css
@@ -163,6 +163,11 @@ p {
 .navigation {
   height: 100px;
   background-color: #F6F6F6;
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  right: 0;
+  background: rgba(246, 246, 246, 0.7);
 }
 .navigation nav {
   display: flex;
@@ -202,6 +207,7 @@ footer {
 }
 .home .hero {
   border-radius: 5px;
+  margin-top: 100px;
 }
 @media (max-width: 500px) {
   .home .hero {
