--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,8 @@
 
   .hero {
     border-radius: 5px;
+    //Added for stretch goal
+    margin-top: 100px;
 
     @media @phone {
       width: 100%;
