--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,13 @@
   height: 100px;
   background-color: @nav-bg;
 
+  // Stretch goal
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  right: 0;
+  background: fade(@nav-bg, 70%);
+
   nav {
     .flexbox();
     justify-content: space-between;
